--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "extension",
+  "name": "magic_extension",
   "version": "0.0.1",
-  "description": "Transformers.js | Sample browser extension",
+  "description": "Magic sync extension",
   "scripts": {
     "build": "webpack",
     "dev": "webpack --watch"
