--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,14 +1,15 @@
 {
   "manifest_version": 3,
-  "name": "extension",
-  "description": "Transformers.js | Sample browser extension",
+  "name": "MagicSync",
+  "description": "MagicSync browser extension",
   "version": "0.0.1",
   "permissions": [
     "activeTab",
     "tabs",
     "scripting",
     "storage",
-    "unlimitedStorage"
+    "unlimitedStorage",
+    "contextMenus"
   ],
   "background": {
     "service_worker": "background.js",
